cafu37_오류파일__23시 40분 59초.txt
buffers_g ['', '', '', '', '']
[설정] 로드 실패: Expecting value: line 1 column 1 (char 0)
[캡차 로컬설치] 체크 상태: 1
[LOCAL STT] 음성캡차 엔진 이미 설치됨
[LOCAL STT] 워커 파일 존재: True, 크기: 3172
[LOCAL STT] 워커 파일 읽기 테스트: stdout=, stderr=Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 2
    import sys, json, os, subprocess, tempfile, uuid,
                                                     ^
SyntaxError: invalid syntax, code=1
[LOCAL STT] Python-STT 경로: C:\Python-STT\python.exe
[LOCAL STT] Python 테스트 stdout: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]
ok
[LOCAL STT] Python 테스트 stderr: 
[LOCAL STT] Python 테스트 코드: 0
[LOCAL STT] 워커 직접 실행: 10초 초과 (정상 - 모델 로딩 중)
[LOCAL STT] 서브프로세스 시작 (PID: 8616)
[LOCAL STT] 상태: {'status': 'ready'}
시작
realID cafu37
realPW tlarudtlr1!
로그인 성공
모드4
[로그 초기화 완료] C:\Users\cafu0\Desktop\새 폴더\page_info_log.txt
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 0
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
---여기
쇼핑
---여기
블로그
---여기
전체
---여기
블로그
---여기
쇼핑
---여기
카페
---여기
전체
---여기
카페
---여기
쇼핑
---여기
블로그
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
뉴스
---여기
전체
---여기
뉴스
---여기
쇼핑
---여기
블로그
---여기
카페
---여기
클립
---여기
이미지
---여기
지식iN
---여기
인플루언서
---여기
동영상
---여기
전체
---여기
동영상
---여기
쇼핑
영수증 캡차 
* recording
* done recording
--로컬 STT 분석 시작
[LOCAL STT] recognized:  여덟  여덟  하나  다섯  일곱  아홉 → digits: 881579
변환된 텍스트: 881579
check_word 길이 : 6
총-----> 1번째 만에 성공
성공
--------mode4 전체 error-------------import --------
에러메세지
list index out of range
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 1
1568
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
시작
File saved to: C:\Users\cafu0\Desktop\새 폴더\logfile.txt